corpus/c/macro_include/case-03/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.c:3:25: error: [macro_include] 'missing_symbol' undeclared (first use in this function)
from: invocation of 'FETCH_VALUE' @ src/main.c:3:25
via : src/wrapper.h:1
| src/main.c:3:25
| int main(void) { return FETCH_VALUE(); }
|                         ^
from include chain:
  - src/wrapper.h:1 included from src/main.c:1
details: --formed-explain | raw: --formed-raw